<resources>
    <string name="app_name">Edu_Tracker0.2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">EduTracker</string>
    <string name="nav_header_subtitle">Verbessere deine Lernskills</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="fach">Fach</string>
    <string name="lernfortschritt">Lernfortschritt: %.1d/%.1d</string>
    <string name="stoppuhr">Stoppuhr</string>
    <string name="timer">Timer</string>
    <string name="nachtrag">Nachtrag</string>
    <string name="statistik">Statistik</string>
    <string name="back">Zurück</string>
    <string name="time_string">%s </string>
    <string name="lernzeit">Lernzeit</string>
    <string name="start">Lernzeit starten</string>
    <string name="stop">Lernzeit beenden</string>
    <string name="pause">Lernzeit pausieren</string>
    <string name="reset">Reset</string>
    <string name="time">%02d:%02d:%02d</string>
    <string name="timeformat">hh:mm:ss</string>
    <string name="notizen">Notizen hinzufügen</string>
    <string name="addAnhang">Anhang hinzufügen</string>
    <string name="file">Dateiname</string>
    <string name="save">Speichern und Beenden</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
